--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta http-equiv="refresh" content="0; url=inicio.html" />
+  <meta http-equiv="refresh" content="0; url=Inicio.html" />
   <title>Redirigiendo...</title>
 </head>
 <body>
-  <p>Redirigiendo a <a href="inicio.html">inicio.html</a></p>
+  <p>Redirigiendo a <a href="Inicio.html">Inicio.html</a></p>
 </body>
 </html>
