--- a/Inicio.html
+++ b/Inicio.html
@@ -1411,5 +1411,14 @@ Estoy muy motivado con este nuevo desafío y me encantaría poder contar con tu 
            window.scrollTo({ top: 0, behavior: 'smooth' });
        }
    </script>
+   
+   <!-- Vercel Speed Insights -->
+   <script>
+       window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+   </script>
+   <script defer src="https://unpkg.com/@vercel/speed-insights@1/dist/index.js"></script>
+   <script>
+       si('init');
+   </script>
 </body>
 </html>
