fix: actualiza Speed Insights para usar método de módulo ES6 para sitios HTML estáticos

--- a/Inicio.html
+++ b/Inicio.html
@@ -1413,12 +1413,9 @@ Estoy muy motivado con este nuevo desafío y me encantaría poder contar con tu 
    </script>
    
    <!-- Vercel Speed Insights -->
-   <script>
-       window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
-   </script>
-   <script defer src="https://unpkg.com/@vercel/speed-insights@1/dist/index.js"></script>
-   <script>
-       si('init');
+   <script type="module">
+       import { injectSpeedInsights } from 'https://unpkg.com/@vercel/speed-insights@1/dist/index.mjs';
+       injectSpeedInsights();
    </script>
 </body>
 </html>
